[project]
name = "sc24-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "typer>=0.12.4",
    "numba>=0.60.0",
    "numpy>=2.0.1",
]

[project.scripts]
sc24-vis = "sc24_vis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
]
